# hello-package

./: hello-package.sln  package.json
dotnet/: Class1.cs  Hello.cs  README.md  dotnet.csproj
dotnet/test/: Program.cs  test.csproj
java/: README.md  pom.xml
java/src/com/pacroy/hello/: Hello.java
java/test/: pom.xml
java/test/src/main/java/hello/: TestHello.java
java/test/src/main/java/testHello/: TestHello.java
nodejs/: README.md  package.json
nodejs/test/: test.js
npm/: README.md  index.js  package.json
npm/test/: test.js
python/: LICENSE  README.md  pyproject.toml
python/src/pacroy_hello/: hello.py
python/test/: test.py
