[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pacroy_hello"
version = "0.0.3"
authors = [
  { name="Chairat Onyaem", email="rove_00anion@icloud.com" },
]
description = "A hello world demo package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pacroy/hello-package/tree/main/python#readme"
"Bug Tracker" = "https://github.com/pacroy/hello-package/issues"